Change routes for AccessPoint service
